--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </article>
                 <!-- progress / show and tell -->
                 <article id="showAndTell" class="vid">
-                    <iframe src=""></iframe>
+                    <iframe></iframe>
                     <h3>Show And Tell</h3>
                 </article>
              </section>
