--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </article>
                 <!-- progress / show and tell -->
                 <article id="showAndTell" class="vid">
-                    <iframe></iframe>
+                    <iframe src="https://www.youtube.com/embed/nXiNb8prpHE"></iframe>
                     <h3>Show And Tell</h3>
                 </article>
              </section>
