added show and tell 2 to index.html

--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
                     <h3>Pitch</h3>
 
                 </article>
-                <!-- progress / show and tell -->
+                <!-- show and tell 1 -->
                 <article id="showAndTell" class="vid">
                     <iframe src="https://www.youtube.com/embed/nXiNb8prpHE"></iframe>
-                    <h3>Show And Tell</h3>
+                    <h3>Show And Tell 1</h3>
+                </article>
+
+                 <!-- show and tell 2 -->
+                <article id="showAndTell2" class="vid">
+                    <iframe src="https://www.youtube.com/embed/ppbruT1GTWs"></iframe>
+                    <h3>Show And Tell 2</h3>
                 </article>
              </section>
              <!-- team intro -->
