added final video index.html

--- a/index.html
+++ b/index.html
@@ -52,12 +52,23 @@
                     <iframe src="https://www.youtube.com/embed/ppbruT1GTWs"></iframe>
                     <h3>Show And Tell 2</h3>
                 </article>
-             </section>
-             <!-- team intro -->
-              <!-- <section id="theTeam">
 
-              </section> -->
+              <!-- final  -->
+              <article id="finalpres" class="vid">
+                <iframe src="https://www.youtube.com/embed/I1LwZnw1a-4"></iframe>
+                <h3>Final Presentation</h3>
+            </article>
+         </section>
 
+         <section>
+            <h2>
+                Links
+            </h2>
+            <a href="AniMo.apk" download>AniMo APK</a>
+            <a href="AniMo.apk" download>AniMo APK</a>
+              
+         </section>
+             
 
         </main>
 
