changed download to link

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <h2>
                 Links
             </h2>
-            <a href="AniMo.apk" download>AniMo APK here</a>
+            <a href="https://drive.google.com/file/d/15lX0Yt5RannTcHFmfmF4lgJNQ0uOJU2Q/view?usp=sharing" target=”_blank">AniMo APK here</a>
             <a href="https://github.com/sreejaveeraghanta/AniMo" target=”_blank”>Github (source code) here</a>
-            <a href="AniMo.zip" download>Zip file of code here</a>
+            <a href="https://drive.google.com/file/d/1LdB6Bsv9_duYdlr6QeTEkbXHZY12gFXd/view?usp=sharing" target=”_blank">Zip file of code here</a>
               
          </section>
 
